# grupal_paralela

./: CMakeLists.txt  conandata.yml  main.cpp
